# yumi_backup

./: README.md
misc/yumi_scripts/: yumi.bash  yumi_demo.bash  yumi_server.bash
setup_ws/: setupWS.bash  setupWSVariables.bash  yumi.bash  yumi_demo.bash  yumi_server.bash
yumi_block_detection/: CMakeLists.txt  package.xml
yumi_block_detection/include/: block_detection.h  block_recognition.h  object_detect.h
yumi_block_detection/msg/: objects.msg
yumi_block_detection/objects/: bridge1.pcd  bridge2.pcd  bridge3.pcd  bridge4.pcd  bridge5.pcd  bridge6.pcd  bridge7.pcd  cloud_cluster_scene_no_floor.pcd  cloud_cluster_scene_no_floor2.pcd  cube.pcd  cuboid1.pcd  cuboid2.pcd  cuboid3.pcd  cuboid4.pcd  cuboid5.pcd  cylinder1.pcd  cylinder2.pcd  cylinder3.pcd  cylinder4.pcd  objects.txt  output.pcd  output1.pcd  output2.pcd  thin_cuboid1.pcd  thin_cuboid2.pcd  triangle.pcd
yumi_block_detection/src/: block_detection.cpp  block_recognition.cpp  conditional_euclidian_clustering.cpp  conditional_lab_clustering.cpp  correspondence_grouping.cpp  region_growing_rgb_segmentation.cpp  template_allignment.cpp  yumi_stacking.cpp  yumi_stacking_demo.cpp
yumi_block_detection/srv/: objectLocation.srv
yumi_block_pick_place/: CMakeLists.txt  package.xml
yumi_block_pick_place/config/: yumi_grasp_data.yaml
yumi_block_pick_place/include/: block_pick.h  block_pick_place.h  pick_place.h
yumi_block_pick_place/launch/: grasps_generator_server.launch  pick_place.launch  yumi_grasp_test.launch
yumi_block_pick_place/src/: block_pick_place.cpp  movegroup_interface_test.cpp  pick_place_constraints.cpp  planning_scene_test.cpp  yumi_basic_grasp.cpp  yumi_grasps_server.cpp
yumi_controllers/: CMakeLists.txt  package.xml
yumi_controllers/config/: gazebo_follow_joint_trajectory.yaml  gazebo_joint_trajectory_controllers.yaml  joint_state_controller.yaml
yumi_controllers/launch/: gazebo_moveit.launch  gazebo_moveit_joint_state_controller.launch  gazebo_moveit_joint_trajectory_controller.launch
yumi_description/urdf/: camera_assembly.xacro  utilities.xacro  workspace.xacro  yumi.transmission.xacro  yumi.urdf.xacro  yumi.xacro  yumi_servo_gripper.transmission.xacro  yumi_servo_gripper.xacro  yumi_twoGrippers.urdf.xacro
yumi_gazebo/: CMakeLists.txt  package.xml
yumi_gazebo/launch/: gazebo_moveit.launch  yumi_gazebo.launch  yumi_world.launch
yumi_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
yumi_moveit_config/bags/: test.bag
yumi_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  yumi.srdf  yumi_cameraArm.srdf  yumi_twoGrippers.srdf
yumi_moveit_config/demo/: Right_ASL_Demo.mod
yumi_moveit_config/launch/: demo.launch  demo_online.launch  gazebo_moveit_planning_exec_minimal.launch  move_group.launch  moveit.rviz  moveit_cameraArm.rviz  moveit_grasp.rviz  moveit_planning_execution.launch  moveit_rviz.launch  moveit_twoGrippers.rviz  planning_context.launch  trajectory_execution.launch.xml  yumi_moveit_controller_manager.launch.xml
yumi_moveit_config/msg/: PrePlan.msg
yumi_moveit_config/paths/: test_movement_joints.txt  test_movement_poses.txt  testing_joints.txt  testing_poses.txt
yumi_moveit_config/paths/old/: unstable_1.txt
yumi_moveit_config/src/: demo_script.cpp  lead_through_script_generator.cpp  run_lead_through_script.cpp  testFunctions.cpp  testFunctions_IK.cpp  testFunctions_demoReading.cpp
yumi_pickplace/yumi_grasp/: CMakeLists.txt  package.xml
yumi_pickplace/yumi_grasp/launch/: yumi_grasp_gazebo.launch
yumi_scripts/: CMakeLists.txt  package.xml
yumi_scripts/bags/: test.bag
yumi_scripts/demo/: Left_ASL_Demo.mod
yumi_scripts/launch/: leap_interface.launch  yumi_node.launch
yumi_scripts/modules/: tester_left.mod  tester_right.mod
yumi_scripts/msg/: JointConfigMsg.msg  ModuleDataMsg.msg  ModuleMsg.msg  PlannerMsg.msg  PoseConfigMsg.msg  PrePlan.msg  TrajectoryJointMsg.msg  TrajectoryMsg.msg
yumi_scripts/paths/: test_left.mod  test_right.mod  tester_left.mod  tester_right.mod
yumi_scripts/paths/old/: ABB.txt  assembly_demo.txt  test.txt  tester.txt
yumi_scripts/src/: config.yaml  config_loading_examples.cpp  config_test.cpp  lead_through.cpp  lead_through_script_generator.cpp  leap_interface.cpp  main_script.cpp  moveit_interface.cpp  new_lead_through.cpp  run_lead_through_script.cpp  test.cpp  test_lead_through.cpp  yumi_interface.cpp  yumi_node.cpp  yumi_script
yumi_scripts/src/misc/: lead_through_script_generator.cpp  structures.cpp  testFunctions_IK.cpp
yumi_startup/launch/: visensor_demo.launch
yumi_startup/parameters/rovio/: rovio_filter.info
yumi_support/config/: joint_names_right_hand.yaml
yumi_support/launch/: robot_interface.launch  robot_interface_orig.launch
yumi_support/rapid/: HandDriver_right.sys  ROS_common.sys  ROS_motionServer_left.mod  ROS_motionServer_left_gripper.mod  ROS_motionServer_right_gripper.mod  ROS_motion_left.mod  ROS_motion_left_gripper.mod  ROS_motion_right_gripper.mod  ROS_stateServer_left.mod  ROS_stateServer_left_gripper.mod  ROS_stateServer_right_gripper.mod
yumi_support/rapid/arms/: ROS_common.sys  ROS_messages.sys
yumi_support/rapid/grippers/: Gripper_stateServer_right.mod
