<package format="2">

  <name>yumi_scripts</name>
  <version>0.2.0</version>
  <description>
     Scripts for YuMi
  </description>
  <author email="wachterfreddy@gmail.com">Frederick Wachter</author>
  <maintainer email="wachterfreddy@gmail.com">Frederick Wachter</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker"></url>
  <url type="repository">https://github.com/ethz-asl/yumi</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>joint_state_publisher</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>robot_state_publisher</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>xacro</depend>
  <depend>yaml_cpp_catkin</depend>
  <depend>yumi_description</depend>
  
</package>
